--- a/extension-manifest-v2/_locales/pt_BR/messages.json
+++ b/extension-manifest-v2/_locales/pt_BR/messages.json
@@ -1,6 +1,6 @@
 {
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Aceitar termos"
   },
   "account_creation_privacy_statement": {
     "message": "Nossos $LINK_TERMS_START$Termos e Condições Gerais$LINK_TERMS_END$ e nosso $LINK_UA_START$Contrato de Licença$LINK_UA_END$ se aplicam. Você encontrará nossa Declaração de Privacidade $LINK_PS_START$aqui$LINK_PS_END$.",
@@ -32,10 +32,13 @@
     "message": "Bloqueie anúncios nas páginas que você visita."
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Permissões adicionais necessárias"
   },
   "ads": {
     "message": "anúncios"
+  },
+  "ads___onboarding": {
+    "message": "Anúncios"
   },
   "adult_advertising": {
     "message": "Anúncios adultos",
@@ -85,10 +88,10 @@
     "message": "Navegação inteligente ATIVADA. O bloqueio de rastreador será ajustado para otimizar o desempenho da página."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Todos as popups"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Tudo pronto! vá com o fantasminha!"
   },
   "already_subscribed": {
     "message": "Já assinei"
@@ -139,13 +142,13 @@
     "message": "Anonimizar rastreadores desbloqueados e desconhecidos para uma maior proteção na navegação."
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Alguma pergunta? A qualquer momento!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Tem certeza?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Tem a certeza de que quer saltar a ativação do Ghostery?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
@@ -432,7 +435,7 @@
   },
   "category_cdn_desc": {
     "description": "User-facing description for the CDN tag category.",
-    "message": "Content delivery networks distribute resources for different site utilities, collect user analytics and tracking data on network traffic."
+    "message": "As redes de entrega de conteúdo distribuem recursos para diferentes utilitários do site, coletam análises de usuários e dados de rastreamento no tráfego da rede."
   },
   "category_comments": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -444,11 +447,11 @@
   },
   "category_consent": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Consent Management"
+    "message": "Gerenciamento de consentimento"
   },
   "category_consent_desc": {
     "description": "User-facing description for the Customer Interaction tag category.",
-    "message": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
+    "message": "Inclui rastreadores usados para gerenciamento de consentimento de cookies, permitindo aos sites diferentes níveis de rastreamento da atividade do usuário"
   },
   "category_customer_interaction": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -464,7 +467,7 @@
   },
   "category_email_desc": {
     "description": "User-facing description for the Email tag category.",
-    "message": "Includes tracking pixels used to measure email open rates."
+    "message": "Inclui pixels de rastreamento usados para medir as taxas de abertura de e-mail."
   },
   "category_essential": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -480,7 +483,7 @@
   },
   "category_extensions_desc": {
     "description": "User-facing description for the Extensions tag category.",
-    "message": "Software on user-devices that can intercept and analyse browser traffic (man in the middle)."
+    "message": "Software em dispositivos de usuário que podem interceptar e analisar o tráfego do navegador (man in the middle)."
   },
   "category_hosting": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -488,7 +491,7 @@
   },
   "category_hosting_desc": {
     "description": "User-facing description for the Hosting tag category.",
-    "message": "Services providing access to websites have access to server logs, including IP address and information about User Agent."
+    "message": "Os serviços que fornecem acesso a sites têm acesso aos logs do servidor, incluindo endereço IP e informações sobre o User Agent."
   },
   "category_misc": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -496,7 +499,7 @@
   },
   "category_misc_desc": {
     "description": "User-facing description for the Miscellaneous tag category.",
-    "message": "Contains different types of unclassified trackers."
+    "message": "Contém diferentes tipos de rastreadores não classificados."
   },
   "category_pornvertising": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -524,11 +527,11 @@
   },
   "category_telemetry": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_uncategorized": {
     "message": "Sem categorias"
@@ -544,7 +547,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Confira as <a href=\"$${0}\" target=\"_blank\">perguntas frequentesFAQs</a> ou escreva para a gente em <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Teremos todo o prazer em falar com você!"
   },
   "choose_your_default_search": {
     "message": "Escolha sua busca padrão"
@@ -632,7 +635,7 @@
     "message": "Confirmar senha:"
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continuar"
   },
   "cookie": {
     "message": "cookie"
@@ -674,7 +677,7 @@
     "message": "Visão detalhada"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Desativar a visualização de rastreadores"
   },
   "dollar_sign": {
     "message": "&#36;"
@@ -696,10 +699,10 @@
     "message": "Email:"
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Ativar o Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Autorize o Ghostery para começar"
   },
   "enable_when_blacklisted": {
     "message": "Para usar esta função, desfaça Restringir Site."
@@ -746,7 +749,7 @@
     "message": "Primeiro nome (opcional):"
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Para mais informações, leia a nossa versão completa"
   },
   "forgot_password": {
     "message": "Esqueceu a senha?"
@@ -767,22 +770,22 @@
     "message": "Básico"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery desativado"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery ativado"
   },
   "ghostery_is_ready": {
     "message": "Ghostery está pronto!"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "O Ghostery está configurado para parar os rastreadores e proteger sua privacidade ao navegar!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados para que obtenham lucro."
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Política de Privacidade do Ghostery"
   },
   "global_settings_saved": {
     "message": "Configurações Globais Salvas"
@@ -807,7 +810,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Concordo em enviar informações não pessoais para a <a href=\"$${0}\">WhoTracks.Me</a> e eu aceito a <a href=\"$${1}\">Política de Privacidade</a> do Ghostery"
   },
   "invalid_email_forgot": {
     "message": "Desculpe, você precisa informar um endereço de email válido."
@@ -816,7 +819,7 @@
     "message": "Desculpe, você precisa informar um endereço de email válido."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações do rastreador para whotracks.me. A entrada do rastreador permite que o Ghostery forneça informações em tempo real sobre rastreadores e proteção para toda a comunidade de usuários do Ghostery."
   },
   "last_name_field_label": {
     "message": "Sobrenome (opcional):"
@@ -865,7 +868,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "Mais informações sobre $${0}."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1267,7 +1270,7 @@
     "message": "Suporte prioritário"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "política de privacidade"
   },
   "privacy_protection": {
     "message": "Proteção de privacidade neste site"
@@ -1516,6 +1519,12 @@
   "settings_show_purple_box_tooltip": {
     "message": "A contagem de rastreamento é uma lista no canto de seu navegador que exibe os rastreadores conforme eles são carregados em tempo real."
   },
+  "settings_show_redirect_tracking_dialogs": {
+    "message": "Peça-me para confirmar antes de visitar um site que me redirecione através de um rastreador"
+  },
+  "settings_show_redirect_tracking_dialogs_tooltip": {
+    "message": "Rastreamento de redirecionamento significa que, em vez de visitar um site diretamente, você é redirecionado primeiro por outro site que pode tentar rastreá-lo (por exemplo, colocando um cookie). Ao contrário do rastreamento normal, você não pode bloquear a solicitação sem interromper a funcionalidade."
+  },
   "settings_show_reload_banner": {
     "message": "Mostrar notificações de recarregamento de página em banners na parte superior da extensão."
   },
@@ -1574,7 +1583,7 @@
     "message": "Ainda atualizado"
   },
   "settings_wtm_serp_report": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Mostrar visualização de rastreadores ao lado dos resultados da pesquisa"
   },
   "seven_day_free_trial": {
     "message": "Avaliação gratuita de 7 dias"
@@ -1777,7 +1786,7 @@
     "message": "Rastreio de todo o sistema e bloqueio de anúncios"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghosty está tirando uma soneca leve."
   },
   "too_many_failed_logins_text": {
     "message": "Muitas falhas ao efetuar login. Tente novamente em uma hora."
@@ -1837,7 +1846,7 @@
     "message": "Detectado"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Prévia de rastreadores"
   },
   "try_ghostery_midnight": {
     "message": "Experimente o Ghostery Midnight"
@@ -1856,10 +1865,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Bem-vindo a"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "O que é whotracks.me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Digite um email ou caractere curinga válidos."
@@ -1872,19 +1881,19 @@
     "message": "Este site já é confiável."
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghostery está tirando uma soneca leve."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, rápida e com menos anúncios irritantes."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você nas configurações do Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Você optou por ignorar a ativação do Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Está tudo pronto, fantasmagórico!"
   },
   "your_email_do_not_match": {
     "message": "Seus emails não conferem."
