--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Aceptar términos"
   },
   "account_creation_privacy_statement": {
     "message": "Se aplican nuestros $LINK_TERMS_START$Términos y condiciones$LINK_TERMS_END$ generales y nuestro $LINK_UA_START$Acuerdo de licencia$LINK_UA_END$. Puedes ver nuestra Política de privacidad $LINK_PS_START$aquí$LINK_PS_END$.",
@@ -32,10 +32,13 @@
     "message": "Bloquea anuncios en las páginas web que visites."
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Se requieren permisos adicionales"
   },
   "ads": {
     "message": "anuncios"
+  },
+  "ads___onboarding": {
+    "message": "Anuncios"
   },
   "adult_advertising": {
     "message": "Publicidad para adultos",
@@ -85,10 +88,10 @@
     "message": "Navegación inteligente SÍ. Se ajustará el bloqueador de rastreadores para optimizar el rendimiento de la página."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Todas las ventanas emergentes"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "¡Todo listo! vamos con ghosty!"
   },
   "already_subscribed": {
     "message": "Ya te has suscrito"
@@ -139,13 +142,13 @@
     "message": "Anonimiza los rastreadores desbloqueados y desconocidos para una mayor protección de navegación."
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "¿Preguntas? ¡Cuando quieras!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "¿Seguro?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "¿Seguro que quieres omitir la activación de Ghostery?"
   },
   "audio_video_player": {
     "message": "Reproductor de audio/vídeo",
@@ -432,7 +435,7 @@
   },
   "category_cdn_desc": {
     "description": "User-facing description for the CDN tag category.",
-    "message": "Content delivery networks distribute resources for different site utilities, collect user analytics and tracking data on network traffic."
+    "message": "Las redes de entrega de contenido (CDN) distribuyen recursos para diferentes aspectos del sitio y recopilan análisis de uso e información de seguimiento de datos sobre el tráfico de la red."
   },
   "category_comments": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -444,11 +447,11 @@
   },
   "category_consent": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Consent Management"
+    "message": "Gestión del consentimiento"
   },
   "category_consent_desc": {
     "description": "User-facing description for the Customer Interaction tag category.",
-    "message": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
+    "message": "Incluye rastreadores utilizados para la gestión del consentimiento mediante cookies, lo que permite a los sitios web diferentes niveles de seguimiento de la actividad del usuario."
   },
   "category_customer_interaction": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -464,7 +467,7 @@
   },
   "category_email_desc": {
     "description": "User-facing description for the Email tag category.",
-    "message": "Includes tracking pixels used to measure email open rates."
+    "message": "Incluye píxeles de seguimiento utilizados para medir las tasas de apertura de correos electrónicos."
   },
   "category_essential": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -480,7 +483,7 @@
   },
   "category_extensions_desc": {
     "description": "User-facing description for the Extensions tag category.",
-    "message": "Software on user-devices that can intercept and analyse browser traffic (man in the middle)."
+    "message": "Software en dispositivos de usuario que puede interceptar y analizar el tráfico del navegador (man in the middle)."
   },
   "category_hosting": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -488,7 +491,7 @@
   },
   "category_hosting_desc": {
     "description": "User-facing description for the Hosting tag category.",
-    "message": "Services providing access to websites have access to server logs, including IP address and information about User Agent."
+    "message": "Los servicios que permiten acceder a los sitios web tienen acceso a los registros del servidor, donde se halla la dirección IP y la información sobre el agente de usuario."
   },
   "category_misc": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -496,7 +499,7 @@
   },
   "category_misc_desc": {
     "description": "User-facing description for the Miscellaneous tag category.",
-    "message": "Contains different types of unclassified trackers."
+    "message": "Contiene diferentes tipos de rastreadores sin clasificar."
   },
   "category_pornvertising": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -524,11 +527,11 @@
   },
   "category_telemetry": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Telemetry"
+    "message": "Telemetría"
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetry"
+    "message": "Telemetría"
   },
   "category_uncategorized": {
     "message": "Sin categoría"
@@ -544,7 +547,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Consulta las <a href=\"$${0}\" target=\"_blank\">preguntas frecuentes</a> o escríbenos a <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. ¡Nos encanta poder hablar contigo!"
   },
   "choose_your_default_search": {
     "message": "Elige tu búsqueda predeterminada"
@@ -632,7 +635,7 @@
     "message": "Confirmar contraseña:"
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continuar"
   },
   "cookie": {
     "message": "cookie"
@@ -674,7 +677,7 @@
     "message": "Vista detallada"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Deshabilitar vista previa de rastreadores"
   },
   "dollar_sign": {
     "message": "&#36;"
@@ -696,10 +699,10 @@
     "message": "Correo electrónico:"
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Habilitar Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Activa Ghostery para empezar"
   },
   "enable_when_blacklisted": {
     "message": "Para usar esta función, anula Restringir sitio."
@@ -746,7 +749,7 @@
     "message": "Nombre (opcional):"
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Para obtener más información, lee todos nuestros"
   },
   "forgot_password": {
     "message": "¿Contraseña  olvidada?"
@@ -767,22 +770,22 @@
     "message": "Básico"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery deshabilitado"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery habilitado"
   },
   "ghostery_is_ready": {
     "message": "¡Ghostery está listo!"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "¡Ghostery está listo para detener a los rastreadores y proteger tu privacidad mientras navegas!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghostery les para los pies a los rastreadores evitando que realicen perfiles sobre ti y que tu información personal se venda a intermediarios de datos para su propio beneficio."
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Política de privacidad de Ghostery"
   },
   "global_settings_saved": {
     "message": "Ajustes globales guardados"
@@ -807,7 +810,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Acepto enviar información no personal a <a href=\"$${0}\">WhoTracks.Me</a> y acepto la <a href=\"$${1}\">Política de privacidad</a> de Ghostery"
   },
   "invalid_email_forgot": {
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
@@ -816,7 +819,7 @@
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Existe gracias a las microcontribuciones de aquellos usuarios de Ghostery que eligen enviar información de seguimiento a whotracks.me. La entrada del rastreador permite a Ghostery proporcionar información en tiempo real sobre rastreadores y protección a toda la comunidad de usuarios de Ghostery."
   },
   "last_name_field_label": {
     "message": "Apellidos (opcional):"
@@ -865,7 +868,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "Más información sobre $${0}."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1267,7 +1270,7 @@
     "message": "Asistencia prioritaria"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "política de privacidad"
   },
   "privacy_protection": {
     "message": "Protección de la privacidad en este sitio"
@@ -1516,6 +1519,12 @@
   "settings_show_purple_box_tooltip": {
     "message": "El recuento de rastreadores es una lista en la esquina de tu navegador que muestra rastreadores a medida que se cargan en tiempo real."
   },
+  "settings_show_redirect_tracking_dialogs": {
+    "message": "Solicitarme confirmación antes de visitar un sitio que me redirige a través de un rastreador"
+  },
+  "settings_show_redirect_tracking_dialogs_tooltip": {
+    "message": "El seguimiento de redirección implica que, en lugar de visitar un sitio web directamente, primero se te redirige a través de otro sitio que puede intentar rastrearte (por ejemplo, colocando una cookie). A diferencia del seguimiento normal, no puedes bloquear la solicitud sin romper la funcionalidad."
+  },
   "settings_show_reload_banner": {
     "message": "Mostrar banner de notificaciones de recarga de la página en la parte superior de la extensión"
   },
@@ -1574,7 +1583,7 @@
     "message": "Aún actualizado"
   },
   "settings_wtm_serp_report": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Mostrar vista previa de rastreadores junto a los resultados de la búsqueda"
   },
   "seven_day_free_trial": {
     "message": "Prueba gratuita de 7 días"
@@ -1777,7 +1786,7 @@
     "message": "Rastreador y bloqueo de anuncios en todo el sistema"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "La extensión del navegador Ghostery está instalada en su navegador, pero Ghosty se está echando una siestecita."
   },
   "too_many_failed_logins_text": {
     "message": "Demasiados inicios de sesión fallidos. Vuelve a intentarlo dentro de una hora."
@@ -1837,7 +1846,7 @@
     "message": "Detectado"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Vista previa de rastreadores"
   },
   "try_ghostery_midnight": {
     "message": "Prueba Ghostery Midnight"
@@ -1856,10 +1865,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Te damos la bienvenida a"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "¿Qué es whotracks.me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Introduce un URL o comodín válidos."
@@ -1872,19 +1881,19 @@
     "message": "Este ya es un sitio de confianza."
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.me, operado por Ghostery, es el recurso global más completo sobre rastreadores y permite aportar mayor transparencia al seguimiento web."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Al habilitar Ghostery, puedes navegar por la web de manera más segura, más rápida y con anuncios menos molestos instantáneamente."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Si cambias de opinión en cualquier momento, también puedes hacer que Ghostery comience a vigilar a los rastreadores por ti en la configuración de Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "¡Has elegido no habilitar Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "¡Ya estás a punto, ghosteriniano/a!"
   },
   "your_email_do_not_match": {
     "message": "Tus correos no coinciden."
