--- a/extension-manifest-v2/_locales/hu/messages.json
+++ b/extension-manifest-v2/_locales/hu/messages.json
@@ -1,6 +1,6 @@
 {
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Feltételek elfogadása"
   },
   "account_creation_privacy_statement": {
     "message": "Az Általános $LINK_TERMS_START$Szerződési Feltételeink$LINK_TERMS_END$ és a $LINK_UA_START$Licencegyezményünk$LINK_UA_END$ érvényesek és hatályosak. Az Adatvédelmi Nyilatkozatunkat $LINK_PS_START$itt$LINK_PS_END$ találja meg.",
@@ -32,10 +32,13 @@
     "message": "Hirdetések blokkolása azokon az oldalakon, amelyeket meglátogat."
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "További engedélyek szükségesek"
   },
   "ads": {
     "message": "hirdetések"
+  },
+  "ads___onboarding": {
+    "message": "Hirdetések"
   },
   "adult_advertising": {
     "message": "Felnőtt hirdetés",
@@ -85,10 +88,10 @@
     "message": "Az Okos böngészés BE van kapcsolva. A trackerblokkolás az oldal optimális működését figyelembe véve korrigálódik."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Minden felugró ablak"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Minden kész! Legyen a Ghostly az ön társa!"
   },
   "already_subscribed": {
     "message": "Már feliratkozott"
@@ -139,13 +142,13 @@
     "message": "Névtelenítse a feloldott és ismeretlen trackereket a fokozottabb böngészési védelem érdekében."
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Kérdése van? Csak bátran!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Biztos benne?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Biztos, hogy nem akarja engedélyezni a Ghostery-t?"
   },
   "audio_video_player": {
     "message": "Zene-/filmlejátszó",
@@ -432,7 +435,7 @@
   },
   "category_cdn_desc": {
     "description": "User-facing description for the CDN tag category.",
-    "message": "Content delivery networks distribute resources for different site utilities, collect user analytics and tracking data on network traffic."
+    "message": "A tartalomszolgáltató hálózatok elosztják az erőforrásokat a különböző webhelyek segédprogramjai számára, felhasználói elemzési és nyomonkövetési adatokat gyűjtenek a hálózati forgalomról."
   },
   "category_comments": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -444,11 +447,11 @@
   },
   "category_consent": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Consent Management"
+    "message": "Hozzájárulás-kezelés"
   },
   "category_consent_desc": {
     "description": "User-facing description for the Customer Interaction tag category.",
-    "message": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
+    "message": "Tartalmazza az internetes sütik (cookie-k) hozzájárulásainak kezeléséhez használt nyomonkövetőket, amelyek lehetővé teszik a webhelyek számára a felhasználói tevékenység különböző szintű nyomon követését."
   },
   "category_customer_interaction": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -464,7 +467,7 @@
   },
   "category_email_desc": {
     "description": "User-facing description for the Email tag category.",
-    "message": "Includes tracking pixels used to measure email open rates."
+    "message": "Tartalmazza az e-mailek megnyitási arányainak mérésére használt nyomkövető pixeleket."
   },
   "category_essential": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -480,7 +483,7 @@
   },
   "category_extensions_desc": {
     "description": "User-facing description for the Extensions tag category.",
-    "message": "Software on user-devices that can intercept and analyse browser traffic (man in the middle)."
+    "message": "A felhasználói eszközökön lévő szoftverek, amelyek képesek a böngésző forgalmát lehallgatni és elemezni (közbeékelődéses támadás)."
   },
   "category_hosting": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -488,7 +491,7 @@
   },
   "category_hosting_desc": {
     "description": "User-facing description for the Hosting tag category.",
-    "message": "Services providing access to websites have access to server logs, including IP address and information about User Agent."
+    "message": "A weboldalakhoz hozzáférést biztosító szolgáltatások hozzáférnek a szervernaplókhoz, beleértve az IP-címeket és a felhasználói ügynökprogramokra vonatkozó információkat."
   },
   "category_misc": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -496,7 +499,7 @@
   },
   "category_misc_desc": {
     "description": "User-facing description for the Miscellaneous tag category.",
-    "message": "Contains different types of unclassified trackers."
+    "message": "Különböző típusú, nem titkosított nyomkövetőket tartalmaz."
   },
   "category_pornvertising": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -524,11 +527,11 @@
   },
   "category_telemetry": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_uncategorized": {
     "message": "Nem kategorizált"
@@ -544,7 +547,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Tekintse meg a <a href=\"$${0}\" target=\"_blank\">FAQ-kat</a> weboldalt, vagy írjon nekünk a <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a> címre! Örömmel állunk rendelkezésére!"
   },
   "choose_your_default_search": {
     "message": "Válassza ki az alapértelmezett keresőt"
@@ -632,7 +635,7 @@
     "message": "Jelszó megerősítése:"
   },
   "continue": {
-    "message": "Continue"
+    "message": "Folytatás"
   },
   "cookie": {
     "message": "cookie"
@@ -674,7 +677,7 @@
     "message": "Részletes nézet"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Nyomonkövetők előnézetének letiltása"
   },
   "dollar_sign": {
     "message": "&#36;"
@@ -696,10 +699,10 @@
     "message": "Emailcím:"
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Ghostery engedélyezése"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Engedélyezze a Ghostery-t a kezdéshez"
   },
   "enable_when_blacklisted": {
     "message": "E funkció használatához vonja vissza az oldal korlátozását."
@@ -746,7 +749,7 @@
     "message": "Keresztnév (opcionális):"
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "További információért olvassa el a teljes"
   },
   "forgot_password": {
     "message": "Elfelejtette a jelszavát?"
@@ -767,22 +770,22 @@
     "message": "Alapvető"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery letiltva"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery engedélyezve"
   },
   "ghostery_is_ready": {
     "message": "A Ghostery készen áll!"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "A Ghostery úgy van beállítva, hogy hatástalanítsa a nyomkövetőket, és megvédje a magánéletét böngészés közben!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "A Ghostery hatástalanítja a nyomkövetőket, és megakadályozza, hogy profilozzák önt és személyes adatait eladják adatbrókereknek a saját profitjuk érdekében."
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Ghostery Adatvédelmi Szabályzat"
   },
   "global_settings_saved": {
     "message": "Globális beállítások mentve"
@@ -807,7 +810,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Hozzájárulok, hogy a nem személyes adataimat elküldjék a <a href=\"$${0}\">WhoTracks.Me</a> részére, és elfogadom a Ghostery <a href=\"$${1}\">Adatvédelmi Szabályzatát</a>."
   },
   "invalid_email_forgot": {
     "message": "Sajnáljuk, de valós emailcímet kell megadnia."
@@ -816,7 +819,7 @@
     "message": "Sajnáljuk, de valós emailcímet kell megadnia."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "A Ghostery minden olyan Ghostery-felhasználó mikro-hozzájárulásának köszönhetően létezik, aki úgy dönt, hogy nyomonkövető információkat küld a whotracks.me-nek. A nyomonkövető adatok átadása lehetővé teszi a Ghostery számára, hogy valós idejű információkat szolgáltasson a nyomonkövetőkről és a védelemről a teljes Ghostery felhasználói közösség számára."
   },
   "last_name_field_label": {
     "message": "Vezetéknév (opcionális):"
@@ -865,7 +868,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "További információ a $$${0}-ról."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1267,7 +1270,7 @@
     "message": "Kiemelt támogatás"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "Adatvédelmi Szabályzat"
   },
   "privacy_protection": {
     "message": "Adatvédelem ezen az oldalon"
@@ -1516,6 +1519,12 @@
   "settings_show_purple_box_tooltip": {
     "message": "A trackerek száma a böngésző sarkában látható lista, amely a valós időben betöltődő trackereket mutatja."
   },
+  "settings_show_redirect_tracking_dialogs": {
+    "message": "Kérjen megerősítést, mielőtt meglátogatnék egy olyan webhelyet, amely egy nyomonkövetőn keresztül irányít át."
+  },
+  "settings_show_redirect_tracking_dialogs_tooltip": {
+    "message": "Az átirányításos nyomon követés azt jelenti, hogy ahelyett, hogy közvetlenül meglátogatna egy webhelyet, először egy másik webhelyen keresztül irányítják át, amely megpróbálhatja nyomon követni önt (pl. cookie-k elhelyezésével). A normál nyomon követéssel ellentétben nem lehet blokkolni a kérést a funkcionalitás megszakítása nélkül."
+  },
   "settings_show_reload_banner": {
     "message": "Jelenítsen meg a kiegészítő felső területén oldal-újratöltési banner-értesítéseket"
   },
@@ -1574,7 +1583,7 @@
     "message": "Még mindig naprakész"
   },
   "settings_wtm_serp_report": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Nyomonkövetők előnézetének megjelenítése a keresési eredmények mellett"
   },
   "seven_day_free_trial": {
     "message": "7 napos ingyenes próbaverzió"
@@ -1777,7 +1786,7 @@
     "message": "Rendszeres követő és reklámblokkoló szoftver"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "A Ghostery böngészőbővítmény telepítve van a böngészőjébe, de Ghosty éppen szundikál."
   },
   "too_many_failed_logins_text": {
     "message": "Túl sok sikertelen bejelentkezés. Próbálja újra egy óra múlva."
@@ -1837,7 +1846,7 @@
     "message": "Észlelve"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Nyomonkövetők előnézete"
   },
   "try_ghostery_midnight": {
     "message": "Próbálja ki a Ghostery Midnight-t"
@@ -1856,10 +1865,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Üdvözöljük"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "Mi az a whotracks.me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Érvényes URL-címet vagy helyettesítő karaktert adjon meg."
@@ -1872,19 +1881,19 @@
     "message": "Ez a webhely már megbízható."
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "A Ghostery által üzemeltetett WhoTracks.me a legátfogóbb globális adatforrás a nyomonkövetőkről, átláthatóvá téve a webes nyomkövetést."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "A Ghostery engedélyezésével azonnal biztonságosabban, gyorsabban és kevesebb idegesítő hirdetéssel böngészhet a weben."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Bármikor meggondolhatja magát, és engedélyezheti a Ghostery beállításaiban, hogy a Ghostery elkezdje a nyomonkövetők követését."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Úgy döntött, hogy kihagyja a Ghostery engedélyezését!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Minden készen áll, Ghostery-rajongó!"
   },
   "your_email_do_not_match": {
     "message": "Az emailcímek nem egyeznek."
