--- a/extension-manifest-v2/_locales/it/messages.json
+++ b/extension-manifest-v2/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "Accetta i termini"
   },
   "account_creation_privacy_statement": {
     "message": "Si applicano le nostre $LINK_TERMS_START$condizioni generali$LINK_TERMS_END$ e il nostro $LINK_UA_START$contratto di licenza$LINK_UA_END$. Troverai la nostra dichiarazione sulla tutela della privacy $LINK_PS_START$qui$LINK_PS_END$.",
@@ -32,10 +32,13 @@
     "message": "Blocca le pubblicità sulle pagine che visiti."
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "Ulteriori permessi richiesti"
   },
   "ads": {
     "message": "pubblicità"
+  },
+  "ads___onboarding": {
+    "message": "Pubblicità"
   },
   "adult_advertising": {
     "message": "Pubblicità per Adulti",
@@ -85,10 +88,10 @@
     "message": "Smart-Browsing ATTIVATO. Il blocco dei tracker verrà regolato per ottimizzare le prestazioni della pagina."
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "Tutti i popup"
   },
   "all_set__go_with_ghosty_": {
-    "message": "All set! go with ghosty!"
+    "message": "Tutto pronto! vai con ghosty!"
   },
   "already_subscribed": {
     "message": "Già Abbonato"
@@ -139,13 +142,13 @@
     "message": "Rendi anonimi i tracker sbloccati e sconosciuti, per una maggior protezione della navigazione."
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "Domande? Quando vuoi!"
   },
   "are_you_sure_": {
-    "message": "Are you sure?"
+    "message": "Sei sicuro?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "Sicuro di non voler abilitare Ghostery?"
   },
   "audio_video_player": {
     "message": "Lettore Audio/Video",
@@ -432,7 +435,7 @@
   },
   "category_cdn_desc": {
     "description": "User-facing description for the CDN tag category.",
-    "message": "Content delivery networks distribute resources for different site utilities, collect user analytics and tracking data on network traffic."
+    "message": "Le reti di content delivery distribuiscono le risorse per le diverse utilità del sito, raccolgono le analisi degli utenti e i dati di monitoraggio del traffico di rete."
   },
   "category_comments": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -444,11 +447,11 @@
   },
   "category_consent": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Consent Management"
+    "message": "Gestione del consenso"
   },
   "category_consent_desc": {
     "description": "User-facing description for the Customer Interaction tag category.",
-    "message": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
+    "message": "Include i tracker utilizzati per la gestione del consenso dei cookie, consentendo ai siti web diversi livelli di tracciamento dell'attività degli utenti."
   },
   "category_customer_interaction": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -464,7 +467,7 @@
   },
   "category_email_desc": {
     "description": "User-facing description for the Email tag category.",
-    "message": "Includes tracking pixels used to measure email open rates."
+    "message": "Include pixel di tracciamento utilizzati per misurare i tassi di apertura delle email."
   },
   "category_essential": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -480,7 +483,7 @@
   },
   "category_extensions_desc": {
     "description": "User-facing description for the Extensions tag category.",
-    "message": "Software on user-devices that can intercept and analyse browser traffic (man in the middle)."
+    "message": "Software sui dispositivi degli utenti in grado di intercettare e analizzare il traffico del browser (man in the middle)."
   },
   "category_hosting": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -488,7 +491,7 @@
   },
   "category_hosting_desc": {
     "description": "User-facing description for the Hosting tag category.",
-    "message": "Services providing access to websites have access to server logs, including IP address and information about User Agent."
+    "message": "I servizi che forniscono l'accesso ai siti web hanno accesso ai registri del server, compreso l'indirizzo IP e le informazioni sullo User Agent."
   },
   "category_misc": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -496,7 +499,7 @@
   },
   "category_misc_desc": {
     "description": "User-facing description for the Miscellaneous tag category.",
-    "message": "Contains different types of unclassified trackers."
+    "message": "Contiene diversi tipi di tracker non classificati."
   },
   "category_pornvertising": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -524,11 +527,11 @@
   },
   "category_telemetry": {
     "description": "Ghostery organizes tags by category. This is one of several tag categories.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetry"
+    "message": "Telemetria"
   },
   "category_uncategorized": {
     "message": "Senza categoria"
@@ -544,7 +547,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+    "message": "Consulta le <a href=\"$${0}\" target=\"_blank\">FAQ</a> o scrivici all'indirizzo <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Saremo più che felice di assisterti!"
   },
   "choose_your_default_search": {
     "message": "Scegli il tuo motore di ricerca predefinito"
@@ -632,7 +635,7 @@
     "message": "Conferma password:"
   },
   "continue": {
-    "message": "Continue"
+    "message": "Continua"
   },
   "cookie": {
     "message": "cookie"
@@ -674,7 +677,7 @@
     "message": "Vista Dettagliata"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "Disattiva anteprima Tracker"
   },
   "dollar_sign": {
     "message": "&#36;"
@@ -696,10 +699,10 @@
     "message": "Email:"
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "Abilita Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "Abilita Ghostery per iniziare"
   },
   "enable_when_blacklisted": {
     "message": "Per utilizzare questa funzione, annulla Sito Limitato."
@@ -746,7 +749,7 @@
     "message": "Nome (Opzionale):"
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "Per maggiori informazioni, visita il nostro sito"
   },
   "forgot_password": {
     "message": "Hai dimenticato la password?"
@@ -767,22 +770,22 @@
     "message": "Base"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery disabilitato"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery abilitato"
   },
   "ghostery_is_ready": {
     "message": "Ghostery è pronto!"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+    "message": "Ghostery blocca i tracker, impedisce la profilazione e che le tue informazioni personali vengano vendute a broker di dati per profitto."
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Informativa sulla Privacy di Ghostery"
   },
   "global_settings_saved": {
     "message": "Impostazioni Globali Salvate"
@@ -807,7 +810,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+    "message": "Accetto di inviare informazioni non personali a <a href=\"$${0}\">WhoTracks.Me</a> e accetto l'informativa sulla privacy di Ghostery <a href=\"$${1}\">."
   },
   "invalid_email_forgot": {
     "message": "Spiacenti, devi inserire un vero indirizzo email."
@@ -816,7 +819,7 @@
     "message": "Spiacenti, devi inserire un vero indirizzo email."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
+    "message": "Esiste grazie ai microcontributi di ogni utente di Ghostery che sceglie di inviare le informazioni del tracker a whotracks.me. L'input del tracker consente a Ghostery di fornire informazioni in tempo reale sui tracker e sulla protezione all'intera comunità di utenti di Ghostery."
   },
   "last_name_field_label": {
     "message": "Cognome (Opzionale):"
@@ -865,7 +868,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__": {
-    "message": "More information on $${0}."
+    "message": "Ulteriori informazioni su $${0}."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1267,7 +1270,7 @@
     "message": "Assistenza prioritaria"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "informativa sulla privacy"
   },
   "privacy_protection": {
     "message": "Protezione della privacy su questo sito"
@@ -1516,6 +1519,12 @@
   "settings_show_purple_box_tooltip": {
     "message": "Il conteggio tracker è un elenco visualizzato nell'angolo del browser in uso che mostra i tracker che si caricano in tempo reale."
   },
+  "settings_show_redirect_tracking_dialogs": {
+    "message": "Chiedimi conferma prima di visitare un sito che mi reindirizza attraverso un tracker"
+  },
+  "settings_show_redirect_tracking_dialogs_tooltip": {
+    "message": "Il tracciamento tramite reindirizzamento significa che invece di visitare direttamente un sito web, l'utente viene prima reindirizzato attraverso un altro sito che potrebbe cercare di tracciarlo (ad esempio, inserendo un cookie). A differenza del normale tracciamento, non è possibile bloccare la richiesta senza interrompere la funzionalità."
+  },
   "settings_show_reload_banner": {
     "message": "Mostra notifiche banner per nuovo caricamento della pagina sopra all'estensione"
   },
@@ -1574,7 +1583,7 @@
     "message": "Ancora aggiornato"
   },
   "settings_wtm_serp_report": {
-    "message": "Show Trackers Preview next to search results"
+    "message": "Mostra anteprima Tracker accanto ai risultati di ricerca"
   },
   "seven_day_free_trial": {
     "message": "7 giorni di prova gratuiti"
@@ -1777,7 +1786,7 @@
     "message": "Tracker e bocco delle pubblicità per tutto il sistema"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "L'estensione per il browser Ghostery è installata, ma Ghosty sta facendo un sonnellino."
   },
   "too_many_failed_logins_text": {
     "message": "Troppi login non riusciti. Riprova tra un'ora."
@@ -1837,7 +1846,7 @@
     "message": "Rilevato"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "Anteprima Tracker"
   },
   "try_ghostery_midnight": {
     "message": "Prova Ghostery Midnight"
@@ -1856,10 +1865,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "welcome_to": {
-    "message": "Welcome to"
+    "message": "Benvenuto su"
   },
   "what_is_whotracks_me_": {
-    "message": "What is whotracks.me?"
+    "message": "Che cos'è whotracks.me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Inserisci un URL o un carattere jolly valido."
@@ -1872,19 +1881,19 @@
     "message": "Questo sito è già stato considerato affidabile."
   },
   "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.me, gestito da Ghostery, è la risorsa globale più completa sui tracker, a favore della trasparenza nel web tracking."
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+    "message": "Con Ghostery abilitato puoi navigare sul web in modo più sicuro, più veloce e con meno pubblicità."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+    "message": "Puoi cambiare idea in qualsiasi momento e consentire a Ghostery di iniziare a tracciare i tracker per te nelle impostazioni di Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "Hai scelto di non abilitare Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "Tutto pronto, Ghosterian!"
   },
   "your_email_do_not_match": {
     "message": "I tuo indirizzi email non coincidono."
